# X280

./: .gitignore  .gitmodules  LICENSE  README.md
scripts/: common_func.sh  find_config.py  init_uav.sh  kill_uav.sh  land.sh  restart_px4_firmware.sh  run_egoplanner.sh  run_fastlio.sh  run_remote.sh  take_off.sh
src/emnavi_sdk/: calib.py
src/emnavi_sdk/data_manager/: CMakeLists.txt  package.xml
src/emnavi_sdk/data_manager/launch/: local_map.launch  maneger_start.launch  msg_compress_send.launch  odom_mavros.launch  swarm_start.launch
src/emnavi_sdk/data_manager/src/: data_manager.cpp  msg_compress_send.cpp  racer_topic.cpp
src/emnavi_sdk/livox_ros_driver2/: CMakeLists.txt  README.md
src/emnavi_sdk/livox_ros_driver2/config/: MID360_config.json  display_point_cloud_ROS1.rviz
src/emnavi_sdk/livox_ros_driver2/launch_ROS1/: msg_MID360.launch  rviz_MID360.launch
src/emnavi_sdk/realsense_driver/: CMakeLists.txt  README.md  package.xml
src/emnavi_sdk/realsense_driver/launch/: rs_d455_camera.launch
src/fast_lio/: .gitignore  README.md
src/fast_lio/FAST-LIO/: CMakeLists.txt  README.md  package.xml
src/fast_lio/FAST-LIO/config/: mid360.yaml  mid360_px4.yaml
src/fast_lio/FAST-LIO/include/: common_lib.h
src/fast_lio/FAST-LIO/rviz_cfg/: loam_livox.rviz
src/fast_lio/launch/: mapping_mid360.launch
src/fast_lio/src/: preprocess.h
src/fast_lio/swarm_manager/: CMakeLists.txt  package.xml
src/global_interface/: CMakeLists.txt  package.xml
src/global_interface/config/: drone_param.yaml
src/global_interface/config/ego_plan/: param.xml  point_param.yaml
src/global_interface/config/fast_lio/: mid360.yaml
src/global_interface/config/livox_ros_driver2/: MID360_config.json
src/global_interface/launch/: driver_start.launch  remote_script.launch
src/global_interface/src/: remote_script_executor.cpp
(+55 files in other folders)
